Wed Jun  4 21:25:35 2003  Kristian Rietveld  <kris@gtk.org>

	Merged from stable.

	* gtk/gtktreeview.c (gtk_tree_view_drag_begin): use a silent
	assert for get_info. (reported by Michael Natterer),
	(gtk_tree_view_expand_all_emission_helper),
	(gtk_tree_view_expand_all_helper): emit row_expanded for all
	expanded rows during an _expand_all operation. (Fixes #111280,
	reported by Benjamin Bayart).

Tue Jun  3 18:32:30 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Don't
	respond to pings on a root window; prevents infinite
	loops if we are selecting for SubstructureNotify on the
	root window. (#111945, Sergey V. Udaltsov)

Tue Jun  3 17:39:16 2003  Owen Taylor  <otaylor@redhat.com>

	#71597, reported by Morten Welinder

	* gdk/gdkpixbuf-drawable.c (rgb888amsb): Fix and simplify
	(Patch from Christian Petig)

	* gdk/gdkpixbuf-drawable.c (rgb{555,565}{a,}{msb,lsb}):
	Major rewrite of 555 and 565 conversion routines:

	- Move all the bit shifting into a small block of macros,
	  eliminating much duplication of complicated arithmetic.
	- Get rid of 2-pixels at a time code, which was buggy,
	  hard to maintain, caused unaligned accesses, and
	  probably didn't actually perform any better.
	- Simplify cases where different data types were
	  used for the little and big endian cases, use
	  GUINT16_SWAP_LE_BE() where appropriate.
		
Tue Jun  3 15:05:47 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (convert_to_format): Remove
	bad optimization for src_rowstride == dest_stride.
	(Didn't consider the case where we were copying only
	partial widths of a wider source buffer)
	(#113034, reported by Hans Petter Jansson)

2003-06-03  Michael Natterer  <mitch@gimp.org>

	* gdk/x11/gdkinput-x11.c (_gdk_input_common_find_events):
	reenabled button_release events for xinput devices. (#113948)

2003-06-03  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "li" to ALL_LINGUAS.
